--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
      <head>
-          <title>My Website Title</title>
+          <title>jonesscheduler</title>
      </head>
      <body>
-          Hello World
+          Why is life so hard lol
      </body>
 </html>
