--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
      <head>
+          <meta charset="UTF-8" />
+          <meta name="description" content="This is a prototype for a scheduling prgram" />
           <title>jonesscheduler</title>
      </head>
      <body>
