--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
           <title>jonesscheduler</title>
      </head>
      <body>
-          Why is life so hard lol
+          Why is life so hard lol <br />
+          This text has changed btw
      </body>
 </html>
