--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
           <!-- Vertical Line -->
           <hr/> 
           
+          <p>
+               This is paragraph number 1.  <br />
+               <b> This text is in bold </b> <br />
+               <u> This text is underlined </u> <br />
+               <i> This text is diagonal </i> <br />
+               <big> This text is big <big> <br />
+               <small> This text is big <small>  
+          </p>
+
+          <p>
+               This is paragraph number 2 <br />
+               This is a big exponent:
+               10<sup>10000</sup>
+          </p>
+          
           Why is life so hard lol <br />
           This text has changed btw
      </body>
