--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                <b> This text is in bold </b> <br />
                <u> This text is underlined </u> <br />
                <i> This text is diagonal </i> <br />
-               <big> This text is big <big> <br />
-               <small> This text is big <small>  
+               <big> This text is big </big> <br />
+               <small> This text is small </small>  
           </p>
 
           <p>
