--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <!-- Title of Website that shows up on tab -->
           <title>jonesscheduler</title>
      </head>
-     <body>
+     <body style="background-color:DarkSeaGreen;>
           <!-- Header at top of website -->
           
           <h1>Henry's Website Prototype</h1>
@@ -43,7 +43,7 @@
                More Green 
           </p>
           
-          <p style="background-color:DarkSeaGreen; color:white;">
+          <p style="background-color:white; color:yellow;">
                This entire paragraph has a green background <br/>
                Still Green <br/>
                More Green 
