--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <!-- Title of Website that shows up on tab -->
           <title>jonesscheduler</title>
      </head>
-     <body style="background-color:DarkSeaGreen;>
+     <body>
           <!-- Header at top of website -->
           
           <h1>Henry's Website Prototype</h1>
