--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                More Green 
           </p>
           
-          <p style="background-color:white; color:yellow;">
+          <p style="background-color:DarkSeaGreen; color:yellow;">
                This entire paragraph has a green background <br/>
                Still Green <br/>
                More Green 
