--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <!-- Title of Website that shows up on tab -->
           <title>jonesscheduler</title>
      </head>
-     <body style="color:grey">
+     <body style="color:grey; background-color:DarkSeaGreen">
           <!-- Header at top of website -->
           
           <h1>Henry's Website Prototype</h1>
