--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                More Green 
           </p>
           
-          <p style="background-color:DarkSeaGreen; color:grey;">
-               This entire paragraph has a green background <br/>
+          <p style="background-color:DarkSeaGreen; color:white;">
+               This entire paragraph has a white background <br/>
                Still Green <br/>
                More Green 
           </p>
