--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                More Green 
           </p>
           
-          <p style="background-color:DarkSeaGreen; color:white;">
+          <p style="background-color:white; color:black;">
                This entire paragraph has a white background <br/>
                Still Green <br/>
                More Green 
