--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
           
           <p style="background-color:white; color:black;">
                This entire paragraph has a white background <br/>
-               Still Green <br/>
-               More Green 
+               Still White <br/>
+               More White 
           </p>
           
           <hr/> 
