--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
           <title>jonesscheduler</title>
      </head>
      <body style="color:grey; background-color:DarkSeaGreen">
+          <header>
+          Henry's Website Prototype
+               <nav>
+                    Nav
+               </nav>
+          </header>
           <!-- Header at top of website -->
           
-          <h1>Henry's Website Prototype</h1>
+          <!-- <h1>Henry's Website Prototype</h1> -->
           
           <!-- Vertical Line -->
           <hr/> 
