--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <header>
                <h1>Henry's Website Prototype</h1>
                <nav>
-                    Navigation:
+                    Navigation: <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a>
                </nav>
                <hr/> 
           </header>
