--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
           <header>
                <h1>Henry's Website Prototype</h1>
                <nav>
-                    Navigation: <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a>
+                    Navigation: 
+                    <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a>
+                    <a href="./about.html"> About Me </a>
                </nav>
                <hr/> 
           </header>
