--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                <h1>Henry's Website Prototype</h1>
                <nav>
                     Navigation: 
-                    <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a>
+                    <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a> &nbsp
                     <a href="./about.html"> About Me </a>
                </nav>
                <hr/> 
