--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                <nav>
                     Navigation: 
                     <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a> &nbsp
-                    <a href="./about.html"> About Me </a>
+                    <a href="./about.html"> About Me </a> &nbsp
+                    <a href="./fractals.html"> Fractals </a>
                </nav>
                <hr/> 
           </header>
