--- a/fractals.html
+++ b/fractals.html
@@ -24,6 +24,9 @@
                </p>
                
                <img src="./media/mandel3.PNG">
+               <img src="./media/mandel2.PNG">
+               <img src="./media/mandel1PNG">
+               <img src="./media/MandelBrot 10000.PNG">
           </main>
           
           <footer>
