--- a/fractals.html
+++ b/fractals.html
@@ -25,8 +25,7 @@
                
                <img src="./media/mandel3.PNG">
                <img src="./media/mandel2.PNG">
-               <img src="./media/mandel1PNG">
-               <img src="./media/MandelBrot 10000.PNG">
+               <img src="./media/mandel1.PNG">
           </main>
           
           <footer>
