--- a/fractals.html
+++ b/fractals.html
@@ -26,6 +26,7 @@
                <img src="./media/mandel3.PNG">
                <img src="./media/mandel2.PNG">
                <img src="./media/mandel1.PNG">
+               <img src="./media/mandel1.PNG" width="50">
           </main>
           
           <footer>
