--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
           
           <!-- Title of Website that shows up on tab -->
           <title>jonesscheduler</title>
+          <link rel="icon" href="./media/mandel1.PNG">
      </head>
      <body style="color:grey; background-color:DarkSeaGreen">
           <header>
