--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
                     <li>Ordered List Element #2</li>
                     <li>Ordered List Element #3</li>
                </ol>
+               
+               <table>
+                    <caption>Identity Matrix</caption>
+                    <thead>
+                         <tr>
+                              <th>Column 1</th>
+                              <th>Column 2</th>
+                              <th>Column 3</th>
+                         </tr>
+                    </thead>
+                    <tbody>
+                         <tr>
+                              <td>1</td>
+                              <td>0</td>
+                              <td>0</td>
+                         </tr>
+                         <tr>
+                              <td>0</td>
+                              <td>1</td>
+                              <td>0</td>
+                         </tr>
+                         <tr>
+                              <td>0</td>
+                              <td>0</td>
+                              <td>1</td>
+                         </tr>
+                    </tbody>
+               </table>
           </main>
           
           <footer>
