--- a/fractals.html
+++ b/fractals.html
@@ -13,7 +13,7 @@
           <header>
                <h1>Fractals!!!</h1>
                <nav>
-                    Navigation: <a href="https://henryj111.github.io/jonesscheduler/"> Return to Main Page </a>
+                    Navigation: <a href="./index.html"> Return to Main Page </a>
                </nav>
                <hr/> 
           </header>
