--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
                     Navigation: 
                     <a href="https://github.com/HenryJ111/jonesscheduler/"> Henry's Github </a> &nbsp
                     <a href="./about.html"> About Me </a> &nbsp
-                    <a href="./fractals.html"> Fractals </a>
+                    <a href="./fractals.html"> Fractals </a> &nbsp
+                    <a href="./inputs.html"> Inputs </a>
                </nav>
                <hr/> 
           </header>
