--- a/inputs.html
+++ b/inputs.html
@@ -35,6 +35,7 @@
                <input type="submit" />
                <input type="time" />
                <input type="url" />
+               <div> <iframe style="width: 400px; height: 560px;" src="https://www.chess.com/daily_puzzle" frameborder="0"></iframe> </div>
           </main>
           
           <footer>
